syntax = "proto3";

package category;

service CategoryService {
  rpc FindAll (Empty) returns (CategoriesResponse);
  rpc FindOne (FindOneRequest) returns (CategoryResponse);
  rpc FindBySlug (FindBySlugRequest) returns (CategoryResponse);
  rpc Create (CreateCategoryRequest) returns (CategoryResponse);
  rpc Update (UpdateCategoryRequest) returns (CategoryResponse);
  rpc Remove (RemoveRequest) returns (CategoryResponse);
}

message Empty {}

message FindOneRequest {
  int32 id = 1;
}

message FindBySlugRequest {
  string slug = 1;
}

message CreateCategoryRequest {
  string name = 1;
  string slug = 2;
}

message UpdateCategoryRequest {
  int32 id = 1;
  optional string name = 2;
  optional string slug = 3;
}

message RemoveRequest {
  int32 id = 1;
}

message CategoryResponse {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  repeated ProductResponse products = 4;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  optional string description = 3;
  double price = 4;
  int32 stock = 5;
}

message CategoriesResponse {
  repeated CategoryResponse categories = 1;
}
